--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="webtolead.css"/>
 </head>
 <body>
-    <h1>Create Lead</h1>
+    <h1 style="color:red">Create Lead</h1>
     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" onsubmit="beforesubmit(event)">
     <input type=hidden name='captcha_settings' value='{"keyname":"myfirstlwcminiprjctwebtolead","fallback":"true","orgId":"00D5g000005IqkD","ts":""}'>
 
