--- a/thanks.html
+++ b/thanks.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 style="color: maroon;">Thanks!Details are Submitted.Sales Rep will get back to you.</h2>
+    <h2 style="color: rgb(235, 51, 201);">Thanks!Details are Submitted.Sales Rep will get back to you.</h2>
 </body>
 </html>
